syntax="proto3";

//命名空间
option csharp_namespace="GrpcToken";
//包名
package user;

message UserDtoGrpc{
	int32 id=1;
	string name=2;
	string email=3;
	string phone=4;
	string address=5;
	string password=6;
	string jwt_version=7;
}

//入参
message UserRequest{
}

//出参
message UserResponse{
	 UserDtoGrpc user=1;
}

//声明需要暴露的Grpc方法
service UserService{
	rpc GetUser(UserRequest) returns (UserResponse);
} 